Null checking (Car, User)